<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/popup_menu_action_1"
        android:title="@string/action_1" />
    <item
        android:id="@+id/popup_menu_action_2"
        android:title="@string/action_2" />
    <item
        android:id="@+id/popup_menu_action_3"
        android:title="@string/action_3" >
        <menu >
            <item
                android:id="@+id/popup_menu_action_4"
                android:title="@string/action_4" />
            <item
                android:id="@+id/popup_menu_action_5"
                android:title="@string/action_5" />
            <item
                android:id="@+id/popup_menu_action_6"
                android:title="@string/action_6" />
        </menu>
    </item>
</menu>