<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.WidgetsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_button"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_toggle_group"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="56dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/a" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/b" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/d" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/chips"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:chipSpacing="16dp"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/checkable"
                app:chipBackgroundColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/filter_chip" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/corner_radius"
                app:checkedIconVisible="true"
                app:chipCornerRadius="4dp" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/stroke"
                app:chipStrokeColor="@color/colorAccent"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_icon"
                app:checkedIconEnabled="false"
                app:chipIcon="@drawable/ic_chip_icon"
                app:chipIconTint="@color/gray_deep"
                app:chipIconVisible="true"
                app:chipStartPadding="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/close_icon"
                app:closeIconVisible="true"
                app:rippleColor="@color/colorAccent" />


        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/spinner"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/spinner_array"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>