<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.DialogsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF6E40"
            android:text="@string/single_choice_dialog"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FF5252"
            android:text="@string/multi_choice_dialog"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FF4081"
            android:text="@string/progress_dialog"
            app:cornerRadius="24dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_4"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#E040FB"
            android:text="@string/progress_dialog"
            app:cornerRadius="24dp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="100"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_5"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#7C4DFF"
            android:text="@string/data_picker_dialog"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_6"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#536DFE"
            android:text="@string/time_picker_dialog"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_7"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#448AFF"
            android:text="@string/bottom_dialog"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_8"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#40C4FF"
            android:text="@string/fullscreen_dialog"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_9"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FFAB40"
            android:text="@string/popup_menu"
            app:cornerRadius="24dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

