<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/round"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/gray_light"
            android:transitionName="shareView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_recycler_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_recycler_item_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@+id/round"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_recycler_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_recycler_item_2"
            app:layout_constraintStart_toStartOf="@+id/tv_recycler_item_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_recycler_item_1" />

        <TextView
            android:id="@+id/tv_recycler_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_recycler_item_3"
            app:layout_constraintStart_toStartOf="@+id/tv_recycler_item_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_recycler_item_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>